resources/example-ingress-appsec.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/","openappsec.io/policy":"open-appsec-best-practice-policy"},"name":"example-ingress-appsec","namespace":"default"},"spec":{"ingressClassName":"appsec-nginx","rules":[{"host":"microservices.local","http":{"paths":[{"backend":{"service":{"name":"web","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/rewrite-target: /
    openappsec.io/policy: open-appsec-best-practice-policy
  creationTimestamp: "2024-09-09T21:56:23Z"
  generation: 1
  name: example-ingress-appsec
  namespace: default
  resourceVersion: "1626"
  uid: 0aefd134-1e4f-4c6d-b39c-8b3b12169450
spec:
  ingressClassName: appsec-nginx
  rules:
  - host: microservices.local
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 127.0.0.1
