resources/open-appsec-learning-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: open-appsec
    meta.helm.sh/release-namespace: appsec
  creationTimestamp: "2024-09-09T21:55:50Z"
  labels:
    app.kubernetes.io/managed-by: Helm
  name: open-appsec-learning-svc
  namespace: appsec
  resourceVersion: "1396"
  uid: 080bb12f-bc62-430c-a332-37596c6980d4
spec:
  clusterIP: 10.98.246.136
  clusterIPs:
  - 10.98.246.136
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 80
  selector:
    app: open-appsec-learning-lbl
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
